--- a/src/main/resources/visualisation.fxml
+++ b/src/main/resources/visualisation.fxml
@@ -1,18 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.shape.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="900.0" style="-fx-background-color: #f5f5f5;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
     <children>
         <VBox layoutX="36.0" layoutY="89.0" prefHeight="255.0" prefWidth="138.0">
             <children>
-                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="52.0" stroke="#ffffff00" strokeType="INSIDE" width="200.0" />
+            <StackPane prefHeight="150.0" prefWidth="200.0">
+               <children>
+                      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="52.0" stroke="#ffffff00" strokeType="INSIDE" width="200.0" />
+                  <Label fx:id="graphName" text="Label" />
+               </children>
+            </StackPane>
                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#fbcb79" height="52.0" layoutX="10.0" layoutY="10.0" stroke="#ffffff00" strokeType="INSIDE" width="200.0" />
                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f78a47" height="52.0" layoutX="10.0" layoutY="62.0" stroke="#ffffff00" strokeType="INSIDE" width="200.0" />
                 <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#336699" height="52.0" layoutX="10.0" layoutY="114.0" stroke="#ffffff00" strokeType="INSIDE" width="200.0" />
             </children>
         </VBox>
+      <Button fx:id="startButton" layoutX="420.0" layoutY="63.0" mnemonicParsing="false" onAction="#handleButtonClick" text="Button" />
     </children>
 </Pane>
