--- a/src/main/resources/visualisation.fxml
+++ b/src/main/resources/visualisation.fxml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.StackedBarChart?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
@@ -17,7 +20,7 @@
     <Region layoutX="37.0" layoutY="375.0" prefHeight="80.0" prefWidth="230.0" style="-fx-background-color: #f78a47;" styleClass="statsBG" />
     <Region layoutX="37.0" layoutY="464.0" prefHeight="80.0" prefWidth="230.0" style="-fx-background-color: #336699;" styleClass="statsBG" />
     <Region layoutX="37.0" layoutY="221.0" prefHeight="50.0" prefWidth="230.0" styleClass="miniStatsBG" />
-    <Region layoutX="584.0" layoutY="47.0" prefHeight="35.0" prefWidth="179.0" styleClass="miniStatsBG" />
+    <Region layoutX="718.0" layoutY="46.0" prefHeight="35.0" prefWidth="179.0" styleClass="miniStatsBG" />
     <Text fill="#3d3e3e" layoutX="52.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Graph:" wrappingWidth="200.7294921875" />
     <Text fill="WHITE" layoutX="69.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Elapsed (s)" textAlignment="CENTER" wrappingWidth="159.7294921875" />
     <Text fill="WHITE" layoutX="72.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="States Examined" textAlignment="CENTER" wrappingWidth="159.7294921875" />
@@ -72,6 +75,14 @@
             <Font name="System Bold" size="12.0" />
         </font>
     </Text>
-    <Region layoutX="293.0" layoutY="108.0" prefHeight="514.0" prefWidth="628.0" style="-fx-background-color: white; -fx-background-radius: 50px;" />
+    <Region layoutX="293.0" layoutY="108.0" prefHeight="489.0" prefWidth="599.0" style="-fx-background-color: white; -fx-background-radius: 50px;" />
    <Label fx:id="graphName" layoutX="123.0" layoutY="238.0" text="Label" />
+   <StackedBarChart layoutX="307.0" layoutY="132.0" prefHeight="436.0" prefWidth="566.0" AnchorPane.topAnchor="132.0">
+     <xAxis>
+       <NumberAxis label="Time" side="BOTTOM"  />
+     </xAxis>
+     <yAxis>
+       <CategoryAxis label="Processors" side="LEFT"/>
+     </yAxis>
+   </StackedBarChart>
 </AnchorPane>
