--- a/src/main/resources/visualisation.fxml
+++ b/src/main/resources/visualisation.fxml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.CategoryAxis?>
-<?import javafx.scene.chart.NumberAxis?>
-<?import javafx.scene.chart.StackedBarChart?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Region?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.chart.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
     <ImageView fitHeight="80.0" fitWidth="250.0" layoutX="25.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
         <Image url="@logo.png" />
     </ImageView>
@@ -20,8 +14,8 @@
     <Region layoutX="37.0" layoutY="375.0" prefHeight="80.0" prefWidth="230.0" style="-fx-background-color: #f78a47;" styleClass="statsBG" />
     <Region layoutX="37.0" layoutY="464.0" prefHeight="80.0" prefWidth="230.0" style="-fx-background-color: #336699;" styleClass="statsBG" />
     <Region layoutX="37.0" layoutY="221.0" prefHeight="50.0" prefWidth="230.0" styleClass="miniStatsBG" />
-    <Region layoutX="718.0" layoutY="46.0" prefHeight="35.0" prefWidth="179.0" styleClass="miniStatsBG" />
-    <Text fill="#3d3e3e" layoutX="52.0" layoutY="251.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Graph:" wrappingWidth="200.7294921875" />
+    <Region layoutX="579.0" layoutY="47.0" prefHeight="35.0" prefWidth="179.0" styleClass="miniStatsBG" />
+    <Text fill="#3d3e3e" layoutX="50.0" layoutY="243.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Graph:" wrappingWidth="58.7294921875" />
     <Text fill="WHITE" layoutX="69.0" layoutY="311.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Time Elapsed (s)" textAlignment="CENTER" wrappingWidth="159.7294921875" />
     <Text fill="WHITE" layoutX="72.0" layoutY="401.0" strokeType="OUTSIDE" strokeWidth="0.0" text="States Examined" textAlignment="CENTER" wrappingWidth="159.7294921875" />
     <Text fill="WHITE" layoutX="72.0" layoutY="490.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Best Time" textAlignment="CENTER" wrappingWidth="159.7294921875" />
@@ -30,7 +24,7 @@
             <Font name="System Bold" size="24.0" />
         </font>
     </Text>
-    <Text fill="WHITE" layoutX="72.0" layoutY="434.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="159.7294921875">
+    <Text fx:id="statesExamined" fill="WHITE" layoutX="72.0" layoutY="427.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="159.7294921875">
         <font>
             <Font name="System Bold" size="24.0" />
         </font>
@@ -76,13 +70,18 @@
         </font>
     </Text>
     <Region layoutX="293.0" layoutY="108.0" prefHeight="489.0" prefWidth="599.0" style="-fx-background-color: white; -fx-background-radius: 50px;" />
-   <Label fx:id="graphName" layoutX="123.0" layoutY="238.0" text="Label" />
-   <StackedBarChart layoutX="307.0" layoutY="132.0" prefHeight="436.0" prefWidth="566.0" AnchorPane.topAnchor="132.0">
+   <Label fx:id="graphName" layoutX="109.0" layoutY="238.0" prefWidth="146.0" text="Label" />
+   <StackedBarChart fx:id="barChartSchedule" layoutX="307.0" layoutY="132.0" prefHeight="436.0" prefWidth="566.0" title="Current best partial schedule" AnchorPane.topAnchor="132.0">
      <xAxis>
-       <NumberAxis label="Time" side="BOTTOM"  />
+       <NumberAxis label="Time" side="BOTTOM" />
      </xAxis>
      <yAxis>
-       <CategoryAxis label="Processors" side="LEFT"/>
+       <CategoryAxis label="Processors" side="LEFT" />
      </yAxis>
    </StackedBarChart>
+   <Text fx:id="statesMagnitude" fill="WHITE" layoutX="72.0" layoutY="446.0" strokeType="OUTSIDE" strokeWidth="0.0" text="million" textAlignment="CENTER" wrappingWidth="159.7294921875">
+      <font>
+         <Font name="System Bold" size="14.0" />
+      </font>
+   </Text>
 </AnchorPane>
