--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -2,28 +2,29 @@
     -fx-font-family: System;
 }
 
-body {
-    -fx-background-color: #f5f5f5;
-}
-
 .statsBG {
     -fx-background-radius: 20px;
+    /*-fx-background-color: #336699;*/
+    -fx-background-color: #dfefff;
+    /*-fx-background-color: #5c85ad;*/
+
 }
 
 .miniStatsBG {
-    -fx-background-radius: 10px;
-    -fx-background-color: white;
+    -fx-background-radius: 15px;
+    -fx-background-color: #f5f9fd;
+    /*-fx-background-color: #5c85ad;*/
 
 }
 
 #startBtn {
     -fx-background-radius: 10px;
     -fx-background-color: #56b661;
-    -fx-font-size: 13px;
+    -fx-font-size: 18px;
     -fx-font-weight: bold;
 }
 
 #startBtn:hover {
     -fx-background-color: #489a52;
-    -fx-cursor: pointer;
+    -fx-cursor: hand;
 }
