--- a/src/main/resources/visualisation.fxml
+++ b/src/main/resources/visualisation.fxml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.chart.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.chart.StackedBarChart?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1440.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1440.0" style="-fx-background-color: white;" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.Controller">
 
     <!-- Left Panel -->
     <!-- Decorative image -->
@@ -25,7 +30,7 @@
             <Font name="System Bold" size="18.0" />
         </font>
     </Text>
-    <Text fx:id="numProcess" fill="#336699" layoutX="232.0" layoutY="230.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="83.7294921875">
+    <Text fx:id="numProcess" fill="#336699" layoutX="245.0" layoutY="229.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" textAlignment="CENTER" wrappingWidth="83.7294921875">
         <font>
             <Font name="System Bold" size="36.0" />
         </font>
@@ -45,25 +50,20 @@
 
     <!-- Input Graph Label -->
     <Region layoutX="59.0" layoutY="266.0" prefHeight="58.0" prefWidth="313.0" styleClass="miniStatsBG" />
-    <Text fill="#3d3e3e" layoutX="79.0" layoutY="302.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Input Graph:" wrappingWidth="96.7294921875">
+    <Text fill="#3d3e3e" layoutX="70.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="INPUT:" wrappingWidth="96.7294921875">
         <font>
             <Font size="14.0" />
         </font>
     </Text>
-    <Label fx:id="graphName" layoutX="176.0" layoutY="287.0" prefHeight="21.0" prefWidth="190.0" text="Label">
-        <font>
-            <Font size="14.0" />
-        </font>
-    </Label>
 
     <!-- Status Label -->
     <Region layoutX="57.0" layoutY="334.0" prefHeight="58.0" prefWidth="313.0" styleClass="miniStatsBG" />
-    <Text fill="#3d3e3e" layoutX="103.0" layoutY="367.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Status:" wrappingWidth="58.7294921875">
+    <Text fill="#3d3e3e" layoutX="70.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STATUS:" wrappingWidth="67.7294921875">
         <font>
             <Font size="14.0" />
         </font>
     </Text>
-    <Text fx:id="statusText" layoutX="173.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STANDBY" wrappingWidth="159.7294921875">
+    <Text id="statusText" fx:id="statusText" layoutX="151.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STANDBY" textAlignment="CENTER" wrappingWidth="206.72946482896805">
         <font>
             <Font name="System Bold" size="18.0" />
         </font>
@@ -82,7 +82,7 @@
     <Region layoutX="423.0" layoutY="1.0" prefHeight="700.0" prefWidth="1061.0" style="-fx-background-color: #f5f9fd; -fx-background-radius: 50px;" />
 
     <!--Bar Graph -->
-    <Text fill="#3d3e3e" layoutX="477.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Best Partial Schedule" textAlignment="CENTER" wrappingWidth="538.7294921875">
+    <Text fx:id="chartTitle" fill="#3d3e3e" layoutX="477.0" layoutY="107.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Current Best Partial Schedule" textAlignment="CENTER" wrappingWidth="538.7294921875">
         <font>
             <Font name="System Bold" size="24.0" />
         </font>
@@ -159,5 +159,6 @@
          <Font name="System Bold" size="14.0" />
       </font>
    </Text>
+   <Text id="graphName" fx:id="graphName" layoutX="132.0" layoutY="301.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER" wrappingWidth="230.0000113248825" />
 
 </AnchorPane>
